syntax = "proto3";

                 package outdoorpvpTemplate;
service OutdoorpvpTemplateService {
 rpc createOutdoorpvpTemplate (OutdoorpvpTemplateCreateInput) returns (OutdoorpvpTemplate) {}
rpc outdoorpvpTemplates (findManyParams) returns (stream OutdoorpvpTemplate) {}
rpc outdoorpvpTemplate (OutdoorpvpTemplateWhereUniqueInput) returns (OutdoorpvpTemplate) {}
rpc updateOutdoorpvpTemplate (OutdoorpvpTemplateUpdateInput) returns (OutdoorpvpTemplate) {}
rpc deleteOutdoorpvpTemplate (OutdoorpvpTemplateWhereUniqueInput) returns (OutdoorpvpTemplate) {} 
 }
message OutdoorpvpTemplateCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message OutdoorpvpTemplate {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message OutdoorpvpTemplateWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message OutdoorpvpTemplateUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};